fixed cow grazing sim reopening issues